# sample-python-ghactions

./: README.md  pyproject.toml  sonar-project.properties
.github/workflows/: cipipeline.yml  generaterelease.yml
app/: main.py
app/routers/: main.py
tests/: test_routes.py
