[tool.poetry]
name = "sample-python-api"
version = "0.1.0"
description = "Example project."
authors = ["First Lastname"]
license = "AGPL-3.0"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.2"
uvicorn = "^0.14.0"
Flask = "^2.1.2"
requests = "^2.27.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
